<resources>
    <string name="app_name">Sunfun</string>
    <string name="map_api_key">AIzaSyCbc2Y5AIwZ8uUeHRUXiozGN3CnpjKT0oI</string>

    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="are_you_forgot_password">are you forgot password ?</string>
    <string name="do_you_have_a_new_account">Do you have a new account?</string>
    <string name="create_an_account">Create a new account</string>
    <string name="user_name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="you_already_have_an_account_log_in">You already have an account! log in</string>
    <string name="home">Home</string>
    <string name="notifications">notifications</string>
    <string name="orders">My Orders</string>
    <string name="more">More</string>
    <string name="event_type">Event Type</string>
    <string name="organizer">Organizer</string>
    <string name="message">message</string>
    <string name="date">Date</string>
    <string name="time">Start time</string>
    <string name="join_us">Join us</string>
    <string name="tickets_remaining">Remaining</string>
    <string name="book_now">Book now</string>
    <string name="bank_account">Bank account</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="about_app">About Tour</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="ticket_num">ticket number</string>
    <string name="order_offr">order offer</string>
    <string name="subject">Subject</string>
    <string name="leave_your_message">Leave your message</string>
    <string name="send">send</string>
    <string name="book">Book</string>
    <string name="date_of_event">Date of Event</string>
    <string name="time_of_event">Time  of  event</string>
    <string name="event_details">Event details</string>
    <string name="tickets">Tickets</string>
    <string name="address">Address</string>
    <string name="make_event">Create Event</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="first_details_about_the_place">Details about the event</string>
    <string name="event_name">Event title ar</string>
    <string name="event_image">Event Image</string>
    <string name="second_details_of_the_place_of_the_event">Second Details of the place of the event</string>
    <string name="event_address">Event Address</string>
    <string name="third_date_and_time">Third Date And Time</string>
    <string name="event_begin">Start date</string>
    <string name="end_of_event">End of event</string>
    <string name="fourth_add_activity_to_the_event">Fourth add activity to the event</string>
    <string name="do_you_want_to_add_event_activity">Do you want to add event activity?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="activity_name">activity name</string>
    <string name="unit">Unit</string>
    <string name="price">price</string>
    <string name="activity_address">activity Address</string>
    <string name="tiket_detials">Event details</string>
    <string name="inc_phonr_password">Incorrect user phone or password</string>
    <string name="skip">skip</string>
    <string name="field_req">Field required</string>
    <string name="inv_email">Invalid email</string>
    <string name="back">Back</string>
    <string name="wait">Wait...</string>
    <string name="inv_em_ps">Invalid Email or Password</string>
    <string name="failed">Failed</string>
    <string name="something">Something went haywire</string>
    <string name="em_exist">Email is exist</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="general_settings">General Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language_settings">Language Settings</string>
    <string name="sar">SAR</string>
    <string name="no_details">No details</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="subscribers_num">Subscribers</string>
    <string name="payment_method">Payment Method</string>
    <string name="ch_pm_methd">Choose payment method</string>
    <string name="cnt_book_event">Can\'t book activity without booking the event.</string>
    <string name="suc">Success !</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_name">Account Name</string>
    <string name="account_iban">Account IBAN</string>
    <string name="account_number">Account Number</string>
    <string name="i_m_a_company">i\'m a company</string>
    <string name="select_language">Select Language</string>
    <string name="select">Select</string>
    <string name="activities">Activities</string>
    <string name="nom">No:</string>
    <string name="enter_subscriber_no">Enter subscriber No</string>
    <string name="ok">Ok</string>
    <string name="responsible_name">Responsible Name</string>
    <string name="national_image_commercial_register_image">National image / Commercial register image</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="search_for_address">Search for address</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="select_a_picture_to_upload">Select a Picture to Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="req_sent">Your request already sent</string>
    <string name="not_avail">Not available now</string>
    <string name="ch_image">Choose Image</string>
    <string name="current">Current</string>
    <string name="previou">Previous</string>
    <string name="completed_events">Completed events</string>
    <string name="refused_event">Refused event</string>
    <string name="total_revenue">Total revenue</string>
    <string name="my_financial_dues">My dues</string>
    <string name="sunfun_dues">SunFun dues</string>
    <string name="credit_limit">Credit limit</string>
    <string name="my_events">My events</string>
    <string name="no_events_to_display">No events to display</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cnt_dele_event">can\'t delete event somebody subscribed</string>
    <string name="delete_event">Delete Event ?</string>
    <string name="event_title_en">Event title en</string>
    <string name="city">City</string>
    <string name="the_beginning_of_event">The beginning of event</string>
    <string name="end_date">End date</string>
    <string name="end_time">End time</string>
    <string name="description_ar">Description ar</string>
    <string name="description_en">Description en</string>
    <string name="information_ar">Information ar</string>
    <string name="information_en">Information en</string>
    <string name="done">Done</string>
    <string name="ch_event_type_cat">Choose event type and category</string>
    <string name="ticket_number_available">Ticket number available</string>
    <string name="activity_image">Activity Image</string>
    <string name="add_activity">Add activity</string>
    <string name="title_ar">Title ar</string>
    <string name="title_en">Title en</string>
    <string name="address_ar">Place ar</string>
    <string name="address_en">Place en</string>
    <string name="the_beginning_of_activity">The beginning of Activity</string>
    <string name="the_end_of_activity">The end of activity</string>
    <string name="cnt_book">can\'t book this event</string>
    <string name="order_state">Order state</string>
    <string name="show_details">Show details</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="no_orders_to_display">No orders to display</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="cam_pem_denied">Camera permission denied</string>
    <string name="edit_password">Edit Password</string>
    <string name="new_password">New Password</string>

    <string name="just_now">just now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="min">MIN</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">Hs</string>
    <string name="yesterday">yesterday</string>
    <string name="day">D</string>
    <string name="new_order">New order</string>
    <string name="order_accepted">Order accepted</string>
    <string name="order_refused">Order refused</string>
    <string name="company_accepted">Your request accepted to be a company</string>
    <string name="company_refused">Your request refused to be a company</string>
    <string name="create_event_accepted">Your event added now</string>
    <string name="create_event_refused">Your event creation refused</string>
    <string name="no_not">No notification to display</string>
    <string name="qr_not_available">Booking code not exist.</string>
    <string name="booking_details">Booking details</string>
    <string name="event">Event</string>
    <string name="company_name">Company name</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="already_request_send">You already sent a request</string>
    <string name="no_ticket_av">No ticket available</string>
    <string name="company">Company :</string>


</resources>
