<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/edt_bg"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:padding="10dp"
    >
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageView1"
        android:layout_height="110dp"
        android:layout_width="110dp"
        android:src="@drawable/logo"
        android:scaleType="fitCenter"
        app:riv_corner_radius="30dip"
        app:riv_border_width="2dip"
        app:riv_border_color="@color/black"
        app:riv_mutate_background="true"
        app:riv_tile_mode="repeat"
        app:riv_oval="true"
       app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />
    <TextView
        android:id="@+id/tv_event_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        android:text="@string/log_in"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        tools:ignore="RtlCompat"
android:textColor="@color/black"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/tv_organizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_event_type"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        android:text="@string/organizer"
        android:layout_marginStart="8dp"
        tools:ignore="RtlCompat"
android:textColor="@color/gray3"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_organizer"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        android:text="@string/message"
        android:layout_marginStart="8dp"
        tools:ignore="RtlCompat"
        android:textColor="@color/black"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_msg"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        android:text="@string/date"
        android:layout_marginStart="8dp"
        tools:ignore="RtlCompat"
        android:textColor="@color/black"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        android:text="@string/time"
        android:layout_marginStart="8dp"
        tools:ignore="RtlCompat"
        android:textColor="@color/black"
        android:textSize="15sp"
        />
    <ImageView
        android:id="@+id/im_placeholdr"
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_placeholder"
        android:tint="@color/colorPrimary"
        />
    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@+id/im_placeholdr"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_star"
        android:tint="@color/golden"
        android:layout_marginTop="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/imageView1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="5dp"
        >
   <TextView
       android:layout_width="70dp"
       android:layout_height="match_parent"
       android:background="@drawable/edt_bg2"
       android:text="@string/price"
       android:gravity="center"
       android:textColor="@color/black"
       android:textSize="15sp"
       />
        <View
            android:layout_width="15dp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@drawable/edt_bg2"
            android:text="@string/join_us"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            />
        <View
            android:layout_width="15dp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@drawable/edt_bg2"
            android:text="@string/tickets_remaining"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            />
        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@drawable/edt_bg3"
            android:text="@string/book_now"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>