<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/fourth_add_activity_to_the_event"
            android:textColor="@color/black"
            android:textSize="15sp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/do_you_want_to_add_event_activity"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"

            >

            <CheckBox
                android:id="@+id/chec_yes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/yes"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:useMaterialThemeColors="false"
                />

            <CheckBox
                android:id="@+id/chec_no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/no"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/chec_yes"
                app:useMaterialThemeColors="false"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:background="@drawable/edt_bg">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/image2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:longClickable="false"
                app:riv_border_color="@color/gray4"
                app:riv_border_width="0dp"

                />

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:longClickable="false"
                android:padding="5dp"
                android:src="@drawable/ic_upload" />
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/activity_name"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/activity_name"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray4"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/unit"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray4"
            android:layout_marginTop="8dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/price"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray4"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/activity_address"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edt_bg"
            android:hint="@string/activity_address"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray4"
            />
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_success"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            >

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</ScrollView>