<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/bottom_background"
    android:clickable="true"

    android:focusable="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >



            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="fitXY"
                android:src="@drawable/top_background"
                app:layout_constraintTop_toTopOf="parent"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/create_an_account"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/image"

                android:layout_marginBottom="30dp"/>


            <LinearLayout
                android:id="@+id/cons1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1"

                >

                <EditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"

                    android:background="@drawable/edt_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/user_name"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray4"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"

                    android:layout_marginTop="15dp"
                    android:background="@drawable/edt_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray4"
                    android:textSize="14sp"

                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    app:errorEnabled="false"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary"

                    >

                    <EditText
                        android:id="@+id/edt_pass"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"

                        android:background="@drawable/edt_bg"
                        android:gravity="center_vertical"
                        android:hint="@string/password"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray4"
                        android:textSize="14sp"
                        android:inputType="textPassword"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"

                    android:layout_marginTop="15dp"
                    android:background="@drawable/edt_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray4"
                    android:textSize="14sp"

                    />

                <Button
                    android:id="@+id/bt_signup"
                    android:layout_width="180dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edt_bg"
                    android:text="@string/signup"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/you_already_have_an_account_log_in"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout >
</layout>